Perfil de usuario

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 
+    <script src="https://kit.fontawesome.com/24a42d6608.js" crossorigin="anonymous"></script>
+
     <!--Google-->
     <script src="https://apis.google.com/js/platform.js"></script>
     <meta name="google-signin-client_id" content="986128165421-qe5afla31j1l4j5uu7b7r5htdpttg53i.apps.googleusercontent.com">
